--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -1,21 +1,3 @@
-%h1 Listing boards
+-# # = react_component('Boards', boards: @boards)
 
-%table
-  %thead
-    %tr
-      %th Name
-      %th
-      %th
-      %th
-
-  %tbody
-    - @boards.each do |board|
-      %tr
-        %td= board.name
-        %td= link_to 'Show', board
-        %td= link_to 'Edit', edit_board_path(board)
-        %td= link_to 'Destroy', board, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Board', new_board_path
+= react_component('AjaxBoards')
